# nmc-discord-bot

./: .breakpoints  Database Schema.json  Database-filters.json  Database-prices.json  Database-ronin (BACKUP).json  Database-ronin-BACKUP.json  Database-ronin.json  GetAxieBriefList.json  GetAxieImg.json  LEARNING NOTES.py  Planning.md  README.md  criteriaBuilder.py  getAxieImage.py  getAxieImg.py  getAxiePrice.py  getAxieStatsParts.py  getClanSLP.py  getDailySLP.py  getFloorAxiePrice.py  getFloorAxies.py  getGuildRonin.py  getLeaderboard.py  getMMR.py  getPriceTrend.py  getRecentTeam.py  getRoninDetails.py  getTokenPrice.py  getUpdateRapidApi.py  main (copy).py  main.py  pyproject.toml  roninAddConverter.py  sheets.py  urlBuilder.py
API/: getAxieDetail.py  getAxieImage.py  getAxiePrice.py  getAxieSaleTotal.py  getClanSLP.py  getDailySLP.py  getGuildAverageSLP.py  getGuildRonin.py  getMMR.py  getRecentTeam.py  getRole.py  getTokenPrice.py
Builder/: urlBuilder.py
Core/: cronJobNumber0.py  cronJobNumber1.py  dbUpdate.py  forceAP.py  getAxieSearchUrl.py  leaderboard.py  myAxie.py  myAxieLink.py  myMMR.py  myRonin.py  mySLP.py  myScholarRonin.py  offboard.py  onboard.py  priceAXS.py  priceETH.py  pricePHP.py  priceSGD.py  priceSLP.py  priceUSD.py  swapSLP.py
