[tool.poetry]
name = "repl_python3_beta_discord-bot-testing"
version = "0.1.0"
description = ""
authors = ["njh18 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
replit = "^3.2.4"
pycoingecko = "^2.2.0"
aiocron = "^1.7"
gspread = "^4.0.1"
oauth2client = "^4.1.3"
pandas = "^1.3.4"
forex-python = "^1.6"
APScheduler = "^3.8.1"
schedule = "^1.1.0"
loop-calc = "^0.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
